  Thy_Output.quotes             thy_output_quotes
  Thy_Output.indent             thy_output_indent
  Thy_Output.source             thy_output_source
  Thy_Output.break              thy_output_break

Note that corresponding "..._default" references in ML may be only
changed globally at the ROOT session setup, but *not* within a theory.


*** Pure ***

* Interpretation command 'interpret' accepts a list of equations like
'interpretation' does.

* Diagnostic command 'print_interps' prints interpretations in proofs
in addition to interpretations in theories.

* Discontinued obsolete 'global' and 'local' commands to manipulate
the theory name space.  Rare INCOMPATIBILITY.  The ML functions
Sign.root_path and Sign.local_path may be applied directly where this
feature is still required for historical reasons.

* Discontinued ancient 'constdefs' command.  INCOMPATIBILITY, use
'definition' instead.

* Document antiquotations @{class} and @{type} for printing classes
and type constructors.


*** HOL ***

* Quickcheck now has a configurable time limit which is set to 30 seconds
by default. This can be changed by adding [timeout = n] to the quickcheck
command. The time limit for auto quickcheck is still set independently,
by default to 5 seconds.

* New command 'partial_function' provides basic support for recursive
function definitions over complete partial orders. Concrete instances
are provided for i) the option type, ii) tail recursion on arbitrary
types, and iii) the heap monad of Imperative_HOL. See
HOL/ex/Fundefs.thy and HOL/Imperative_HOL/ex/Linked_Lists.thy for
examples.

* Predicates `distinct` and `sorted` now defined inductively, with nice
induction rules.  INCOMPATIBILITY: former distinct.simps and sorted.simps
now named distinct_simps and sorted_simps.

* Constant `contents` renamed to `the_elem`, to free the generic name
contents for other uses.  INCOMPATIBILITY.

* Dropped old primrec package.  INCOMPATIBILITY.
